# finstack-quant

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  INVARIANTS.md  README.md  RELEASE_NOTES_0.6.0.md  SECURITY.md  deny.toml  mise.toml  osv-scanner.toml  pyproject.toml
finstack-quant/: Cargo.toml
finstack-quant-py/: Cargo.toml  DOCS_STYLE.md  README.md  parity_contract.toml
finstack-quant-py/benchmarks/: __init__.py  bench_bindings.py
finstack-quant-py/docs/notebook-coverage/: ADVANCED_QUANT_API_COVERAGE_AUDIT.md  ALL_NOTEBOOKS_API_COVERAGE_AUDIT.md  FOUNDATIONS_API_COVERAGE_AUDIT.md  PORTFOLIO_SCENARIOS_API_COVERAGE_AUDIT.md
finstack-quant-py/examples/notebooks/: ALL_NOTEBOOKS_API_COVERAGE_AUDIT.md  README.md  run_all_notebooks.py
finstack-quant-py/examples/scripts/: reporting_instrument_tearsheet.py  reporting_performance_tearsheet.py  run_all_scripts.py
finstack-quant-py/finstack_quant/: __init__.py  finstack_quant.pyi
finstack-quant-py/finstack_quant/analytics/: __init__.py  __init__.pyi
finstack-quant-py/finstack_quant/attribution/: __init__.py  __init__.pyi
finstack-quant-py/finstack_quant/cashflows/: __init__.py  __init__.pyi
finstack-quant-py/finstack_quant/core/: __init__.py  __init__.pyi  config.pyi  credit.pyi  currency.pyi  dates.pyi  math.pyi  money.pyi  rating_scales.pyi  types.pyi
finstack-quant-py/finstack_quant/covenants/: __init__.py  __init__.pyi
finstack-quant-py/finstack_quant/factor_model/: __init__.py  __init__.pyi
finstack-quant-py/finstack_quant/features/: __init__.py  __init__.pyi  dataframe.py
finstack-quant-py/finstack_quant/margin/: __init__.py  __init__.pyi
finstack-quant-py/finstack_quant/monte_carlo/: __init__.py  __init__.pyi
finstack-quant-py/finstack_quant/portfolio/: __init__.py  __init__.pyi
finstack-quant-py/finstack_quant/reporting/: __init__.py  attribution.py  benchmark.py  charts.py  credit.py  dcf.py  document.py  format.py  instrument.py  performance.py  portfolio.py  portfolio_risk.py  scenario.py  statement.py  statements_common.py  tables.py  theme.py
finstack-quant-py/finstack_quant/scenarios/: __init__.py  __init__.pyi
finstack-quant-py/finstack_quant/statements/: __init__.py  __init__.pyi
finstack-quant-py/finstack_quant/statements_analytics/: __init__.py  __init__.pyi
finstack-quant-py/finstack_quant/valuations/: __init__.py  __init__.pyi  credit.py  credit.pyi  credit_derivatives.py  credit_derivatives.pyi  envelope.py
finstack-quant-py/src/: errors.rs  lib.rs
finstack-quant-py/src/bindings/: date_utils.rs  extract.rs  mod.rs  module_utils.rs  pandas_utils.rs
finstack-quant-py/tests/: __init__.py  conftest.py  test_analytics.py  test_analytics_parity.py  test_arbitrage_bindings.py  test_attribution_dataframes.py  test_attribution_entry.py  test_cashflows.py  test_core_config_validation.py  test_core_credit_migration.py  test_core_credit_scoring.py  test_core_parity.py  test_correlation.py  test_credit_derivatives_pricing.py  test_credit_factor_model_bindings.py  test_credit_validation.py  test_dates_schedule.py  test_envelope_diagnostics.py  test_envelope_typeddict.py  test_error_handling.py  test_exotic_valuations.py  test_factor_model_engine_bindings.py  test_factor_model_risk_bindings.py  test_features_dataframe.py  test_features_transforms.py  test_fx_delta_vol_surface.py  test_fx_valuations.py  test_margin_im.py  test_money_decimal.py  test_monte_carlo.py  test_namespace.py  test_notebook_hygiene.py  test_portfolio_allocation.py  test_portfolio_attribution.py  test_portfolio_binding_performance_paths.py  test_portfolio_brinson.py  test_portfolio_gil_release.py  test_portfolio_loss.py  test_portfolio_performance.py  test_recovery_waterfall.py  (+32 more)
finstack-quant-py/tests/data/: attribution_bond.json  attribution_tearsheet_golden.html  instrument_bond_cashflows.json  instrument_bond_result.json  instrument_bond_tearsheet_golden.html  performance_tearsheet_golden.html
finstack-quant-py/tests/golden/: conftest.py  pricing_validation.py  (+15 more)
finstack-quant-wasm/: Cargo.toml  DOCS_STYLE.md  README.md  index.d.ts  index.js  package-lock.json  package.json
finstack-quant-wasm/benchmarks/: bench.mjs
finstack-quant-wasm/exports/: analytics.js  attribution.js  cashflows.js  core.js  covenants.js  factor_model.js  features.js  margin.js  monte_carlo.js  portfolio.js  scenarios.js  statements.js  statements_analytics.js  valuations.js
finstack-quant-wasm/scripts/: check-dts-docs.mjs  check-typescript-docs.mjs  complete-facade-jsdoc.mjs  sync-facade-jsdoc.mjs
finstack-quant-wasm/src/: lib.rs
finstack-quant-wasm/tests/: dts_contract.rs  wasm_analytics.rs  wasm_attribution.rs  wasm_cashflows.rs  wasm_core_market_data.rs  wasm_credit_factor_hierarchy.rs  wasm_features.rs  wasm_fixed_income.rs  wasm_margin.rs  wasm_math.rs  wasm_monte_carlo.rs  wasm_portfolio.rs  wasm_scenarios.rs  wasm_statements.rs  wasm_statements_analytics.rs  wasm_valuations.rs
finstack-quant/analytics/: Cargo.toml  README.md
finstack-quant/attribution/: Cargo.toml  README.md
finstack-quant/cashflows/: Cargo.toml  README.md
finstack-quant/core/: Cargo.toml  README.md  build.rs
finstack-quant/covenants/: Cargo.toml  README.md
finstack-quant/factor-model/: Cargo.toml  README.md
finstack-quant/features/: Cargo.toml  README.md
finstack-quant/margin/: Cargo.toml  README.md
finstack-quant/monte_carlo/: Cargo.toml  README.md
finstack-quant/portfolio/: Cargo.toml  README.md
finstack-quant/scenarios/: Cargo.toml  README.md
finstack-quant/src/: lib.rs
finstack-quant/statements/: Cargo.toml  README.md
finstack-quant/statements-analytics/: Cargo.toml  README.md
finstack-quant/test-utils/: Cargo.toml  README.md
finstack-quant/tests/: umbrella_surface.rs
finstack-quant/valuations/: Cargo.toml  README.md
finstack/attribution/: Cargo.toml  README.md
finstack/covenants/: Cargo.toml  README.md
finstack/factor-model/: Cargo.toml  README.md
finstack/portfolio/: Cargo.toml  README.md
finstack/scenarios/: Cargo.toml  README.md
(+5529 files in other folders)
