[workspace.package]
version = "0.5.0"
edition = "2021"
rust-version = "1.90"
authors = ["Jon Eickmeier (me@jeickmeier.com)"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/jeickmeier/finstack"

[workspace]
members = [
    "finstack/core",
    "finstack/attribution",
    "finstack/cashflows",
    "finstack/covenants",
    "finstack/monte_carlo",
    "finstack/margin",
    "finstack/analytics",
    "finstack/statements",
    "finstack/statements-analytics",
    "finstack/valuations",
    "finstack/valuations/macros",
    "finstack/factor-model",
    "finstack/portfolio",
    "finstack/scenarios",
    "finstack/test-utils",
    "finstack-py",
    "finstack-wasm",
    "finstack"
]
resolver = "2"

# Exclude Python and WASM bindings from default builds and coverage
default-members = [
    "finstack/core",
    "finstack/attribution",
    "finstack/cashflows",
    "finstack/covenants",
    "finstack/monte_carlo",
    "finstack/analytics",
    "finstack/margin",
    "finstack/statements",
    "finstack/statements-analytics",
    "finstack/valuations",
    "finstack/factor-model",
    "finstack/portfolio",
    "finstack/scenarios",
    "finstack"
]

[workspace.metadata.coverage]
# Coverage configuration: only run on core Rust library, not bindings
exclude = ["finstack-py", "finstack-wasm"]
# Additional patterns to exclude from coverage reports
ignore-filename-regex = ["tests?/", "target/", "\\.cargo/", ".*finstack-py/.*", ".*finstack-wasm/.*"]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
thiserror = "2"
time = { version = "0.3" }
indexmap = "2"
rust_decimal = "1.41.0"
schemars = { version = "1.2", features = ["rust_decimal1", "indexmap2"] }
rust_decimal_macros = "1.40.0"
criterion = { version = "0.8", features = ["html_reports"] }
strum = "0.28"
strum_macros = "0.28"
rustc-hash = "2.1"

# Build profiles
[profile.dev]
# Standard development profile (cargo-llvm-cov will override these for coverage runs)
incremental = true
opt-level = 0
debug = 2

[profile.test]
# Standard test profile
# Reduced debug level for faster compilation (line info only, no full debug symbols)
incremental = true
opt-level = 0
debug = 1

[profile.release]
# Performance-optimized release profile
# Full LTO + single codegen unit for maximum optimization
opt-level = 3           # Optimize for speed
lto = "fat"             # Full link-time optimization (max cross-crate inlining)
codegen-units = 1       # Single codegen unit for maximum optimization
strip = "symbols"       # Strip symbols but keep debug info for profiling

[profile.release-size]
# Size-optimized profile for WASM bundle size
# Use: cargo build --profile release-size
# Or: wasm-pack build --profile release-size
inherits = "release"
opt-level = "z"         # Optimize for size
lto = true              # Full link-time optimization
codegen-units = 1       # Maximum optimization (slower compile, smaller output)
strip = true            # Strip all symbols

[profile.bench]
# Optimized profile for benchmarking
# Automatically used by `cargo bench`
inherits = "release"
opt-level = 3       # Optimize for speed
lto = "fat"         # Full link-time optimization (matches release)
debug = 1           # Line info for profiling tools (flamegraph, perf)

[workspace.metadata.clippy]
profile = "finstack-strict"

# Workspace-wide lints. Every member crate opts in via `[lints] workspace = true`,
# so this table is enforced on ALL targets (lib, tests, benches, examples, bins)
# of every crate by `cargo clippy --workspace --all-targets`.
#
# Lints that are correct for library code but wrong for tests/benches —
# `clippy::panic`, `clippy::unwrap_used`, `clippy::expect_used`,
# `clippy::unreachable`, `clippy::indexing_slicing`, `clippy::float_cmp` — are
# deliberately NOT here. They are enforced as `#![deny]`/`#![warn]` attributes in
# each crate's lib.rs, which scopes them to the library target only.
#
# `clippy::manual_let_else`, `clippy::match_same_arms`, `clippy::redundant_clone`,
# `clippy::clone_on_ref_ptr`, and `clippy::match_wildcard_for_single_variants`
# are at "warn" (target: deny) until the remaining legacy sites — mostly in
# finstack-valuations — are cleaned up.
[workspace.lints.rust]
unsafe_code = "deny"            # project policy: no unsafe anywhere (libs use forbid)
missing_docs = "deny"           # all public API must be documented (rustc lint, not clippy)

[workspace.lints.clippy]
# ---- HYGIENE ----
"dbg_macro" = "deny"            # no leftover dbg!() anywhere
"todo" = "deny"                 # no todo!() placeholders
"unimplemented" = "deny"        # no unimplemented!() placeholders
"wildcard_dependencies" = "deny"

# ---- NUMERICAL SOUNDNESS ----
# Avoid floating-point surprises. `float_cmp` is lib-only (lib.rs attribute):
# exact float comparisons are routine and intentional in tests.
"lossy_float_literal" = "deny"

# ---- ERROR HANDLING ----
"result_large_err" = "deny"     # catches heavy error types
"match_wild_err_arm" = "deny"   # no wildcard catching errors
"needless_borrow" = "deny"

# ---- API DESIGN / READABILITY ----
"missing_docs_in_private_items" = "allow"
"new_without_default" = "deny"
"too_many_arguments" = "deny"
"type_complexity" = "deny"
"large_enum_variant" = "deny"
"module_name_repetitions" = "allow"   # allow finstack_valuations::valuations
"too_many_lines" = "allow"

# ---- PERFORMANCE ----
"map_clone" = "deny"
"clone_on_ref_ptr" = "warn"  # target: deny — legacy sites remain (see header note)
"unused_async" = "deny"
"boxed_local" = "deny"

# ---- CORRECTNESS ----
"match_like_matches_macro" = "deny"
"redundant_clone" = "warn"  # target: deny — legacy sites remain (see header note)
"redundant_field_names" = "deny"
"match_same_arms" = "warn"  # target: deny — legacy sites remain (see header note)
"match_wildcard_for_single_variants" = "warn"  # target: deny — legacy sites remain (see header note)

# ---- MODERN RUST STYLE ----
"manual_let_else" = "warn"  # target: deny — legacy sites remain (see header note)
"manual_ok_or" = "deny"
"manual_strip" = "deny"
"manual_unwrap_or_default" = "deny"
"manual_assert" = "deny"
