# Development environment configuration for the finstack-quant project
# This file provides tool configuration and dependency management via uv
[project]
name = "finstack-quant-py"
# Let maturin derive version from Cargo.toml
dynamic = ["version"]
description = "Python bindings for the Finstack Quant financial computation library"
readme = "finstack-quant-py/README.md"
requires-python = ">=3.12"
license = "MIT OR Apache-2.0"
keywords = [
    "quantitative finance",
    "quant finance",
    "fixed income",
    "credit",
    "portfolio analytics",
    "risk analytics",
    "derivatives",
    "monte carlo",
    "xva",
    "financial modeling",
    "rust",
    "pyo3",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "License :: OSI Approved :: MIT License",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Topic :: Office/Business :: Financial",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Typing :: Typed",
]
dependencies = [
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.7",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "pydantic>=2.12.5",
    "python-dotenv>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/jeickmeier/finstack-quant"
Repository = "https://github.com/jeickmeier/finstack-quant"
Issues = "https://github.com/jeickmeier/finstack-quant/issues"
Documentation = "https://github.com/jeickmeier/finstack-quant/tree/master/docs"
Examples = "https://github.com/jeickmeier/finstack-quant/tree/master/finstack-quant-py/examples/notebooks"

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.maturin]
# Path to the Cargo manifest of the bindings crate
manifest-path = "finstack-quant-py/Cargo.toml"
# Install the native extension as a nested module under the Python import root.
module-name = "finstack_quant.finstack_quant"
# Build finstack-quant-py with extension-module linkage when packaging Python wheels.
features = ["extension-module"]
# Source directory that contains the Python package files (.pyi, py.typed)
python-source = "finstack-quant-py"
include = [
    { path = "finstack-quant-py/finstack_quant/__init__.py", format = ["wheel"] },
    { path = "finstack-quant-py/finstack_quant/**/*.py", format = ["wheel"] },
    { path = "finstack-quant-py/finstack_quant/**/*.pyi", format = ["wheel"] },
    { path = "finstack-quant-py/finstack_quant/py.typed", format = ["wheel"] },
]


#######################
# Pytest Configuration
#######################

[tool.coverage.run]
source = ["finstack-quant-py/finstack_quant"]
omit = ["finstack-quant-py/tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "pass",
    "raise ImportError",
    "except ImportError:",
    "if __name__ == .__main__.:",
]

[tool.pytest.ini_options]
testpaths = ["finstack-quant-py/tests"]
python_files = ["test_*.py", "*_test.py"]
python_functions = ["test_*"]
python_classes = ["Test*"]

# Custom markers used across the test-suite
markers = [
    "perf: performance benchmark suite",
    "security: security and hardening tests",
    "integration: integration tests",
    "slow: long-running tests (waterfall/valuation) that are opt-in",
]

# Warnings configuration
filterwarnings = [
    # Keep third-party deprecations quiet for stable output; surface ours normally
    "ignore::DeprecationWarning:pandas.*",
    "ignore::DeprecationWarning:numpy.*",
    "ignore::DeprecationWarning:matplotlib.*",
    "ignore::DeprecationWarning:dateutil.*",
    "ignore::DeprecationWarning:pytest.*",
]

[dependency-groups]
dev = [
    "maturin>=1.10.2,<2.0",
    "pytest>=9.0.2",
    "pytest-benchmark>=5.2.3",
    "hypothesis>=6.122.4",
    "ty>=0.0.18",
    "ruff>=0.14.8",
    "ipython>=9.8.0",
    "jupyter>=1.1.1",
    "bandit>=1.8.2",
    "pre-commit>=4.0.1",
    "pytest-randomly>=4.0.1",
    "quantlib>=1.41",
    "types-python-dateutil>=2.9.0.20251115",
    "pytest-cov>=7.0.0",
]

#######################
# Ruff Configuration
#######################

[tool.ruff]
line-length = 120
target-version = "py312"
src = ["."]
exclude = [
    ".cursor/**",
    ".ty_cache/**",
    ".pytest_cache/**",
    ".ruff_cache/**",
    "docs/**",
    ".coverage",
    "dist/**",
    ".venv/**",
    "finstack-quant-py/examples/**",
    "**/*.ipynb",
]

[tool.ruff.lint]
select = [
    # ── Core style / correctness ───────────────────────────────
    "E",
    "F",
    "W",    # pycodestyle / pyflakes
    "ANN",
    "D",    # typing & docstrings
    "UP",
    "S",
    "SIM",  # pyupgrade, security, simplification
    "T20",
    "TID",  # print-stmt, tidy-imports
    "TRY",
    "ERA",  # try/except, commented-out code
    "PL",
    "PT",
    "Q",    # pylint, pytest, quotes
    "RUF",
    "PERF",
    "PIE",  # Ruff-specific, performance, misc PIE
    "YTT",
    "EXE",  # sys.version, executable checks

    # ── Add-ons for tighter quality ────────────────────────────
    "B",   # flake8-bugbear           – probable bugs & bad practices
    "N",   # pep8-naming              – PEP-8 identifiers
    "I",   # import ordering (isort)  – deterministic imports
    "C4",  # comprehensions           – needless list(set(..)), etc.
    "ARG", # unused-arguments         – dead param detection
    "BLE", # blind-except             – forbid bare `except:`
    "C90", # mccabe complexity        – flags "god" functions

    # ── File & logging hygiene ─────────────────────────────────
    "PTH", # flake8-use-pathlib       – prefer pathlib APIs
    "LOG", # flake8-logging           – logger misuse
    "G",   # flake8-logging-format    – message formatting issues
]

ignore = [
    "TRY300",  # Consider moving this statement to an else block - stylistic preference
    "TRY301",  # Abstract raise to inner function - hurts readability here
    "TRY003",  # Avoid specifying long messages outside the exception class - allow for context
    "E501",    # Line too long - sometimes necessary
    "ANN401",  # allow Any types
    "PLR0913", # Too many arguments - sometimes necessary
    "PLR0912", # Too many branches - complexity acceptable for now
    "PLC0415", # pylint complexity        – flags "god" functions
    "PLR2004", #
    "RUF003",  #
    "RUF002",  #
    "RUF200",  # False positive: classifiers is correctly formatted per PEP 621
    "S311",    #
    "F403",    #
    "F405",    #
]

[tool.ruff.lint.per-file-ignores]
"**/*.pyi" = ["ALL"]
"**/test_*.py" = ["S101"]
"**/*_test.py" = ["S101"]
"finstack-quant-py/tests/**/*.py" = ["S101", "S110", "S102", "C901", "PLR0915", "D100", "D101", "D102", "D103", "RUF001"]
"finstack-quant-py/finstack_quant/statements/__init__.py" = ["F821"]
"finstack-quant-py/benches/**/*.py" = ["PLR0915"]
"finstack-quant-py/benchmarks/**/*.py" = ["T201", "D100", "D101", "D102", "D103", "ANN", "S101"]
"scripts/**/*.py" = ["T201", "C901", "PLR0915", "PERF401", "ANN", "BLE001", "S112", "PTH", "G004", "TRY401"]
# Golden-fixture generation tooling (committed for provenance/regeneration, not library code).
# N813: `import QuantLib as ql` is the universal QuantLib idiom.
"finstack-quant/core/tests/golden/data/*.py" = ["T201", "ANN", "D103", "S101", "ERA001", "E402", "EXE001", "N813", "RUF046", "C408", "PLR0915", "C901"]
# Calendar lunar-festival table generation tooling (committed for provenance/regeneration, not library code).
"finstack-quant/core/data/*.py" = ["T201", "ANN", "D103", "S101", "EXE001"]
".windsurf/skills/**/scripts/**/*.py" = ["T201"]
"finstack-quant-py/examples/**/*.py" = [
    "D100", "D101", "D103", "D205",  # Missing docstrings - examples are self-documenting
    "ANN",  # Type annotations - examples prioritize readability
    "T201",  # print() is expected in examples
    "EXE001",  # Shebang without executable - fine for examples
    "ERA001",  # Commented code can be instructional
    "B007",  # Unused loop variables in demos
    "E402",  # Import order less strict in examples
    "PLW2901",  # Loop variable overwrites ok in demos
    "BLE001",  # Blind except ok in examples
    "S603", "S607",  # Subprocess security - examples are trusted
    "ARG001",  # Unused arguments in example functions
    "F401",  # Unused imports may be for demonstration
    "PTH118", "PTH123",  # pathlib style not required
    "C901", "PLR0915",  # Complexity limits relaxed
    "E741",  # Ambiguous variable names in math examples
    "RUF001",  # Unicode characters (math symbols)
    "S112",  # try-except-continue ok in examples
]

# Configuration for pydocstyle (D rules)
[tool.ruff.lint.pydocstyle]
convention = "google" # Enforce Google-style docstrings

[tool.ruff.lint.flake8-tidy-imports]
# Disallow relative imports that reach outside the package structure
ban-relative-imports = "parents"


[tool.ruff.format]
quote-style = "double"
docstring-code-format = true      # auto-format snippets
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "lf"
preview = true                    # adopt next-year style early

[tool.ruff.lint.mccabe]
max-complexity = 15

# ---------------------------------
#  isort settings (for "I" rules)
# ---------------------------------
[tool.ruff.lint.isort]
known-first-party = ["finstack_quant"]   # add your own modules here
combine-as-imports = true
force-sort-within-sections = true

#######################
# ty Configuration (Astral type checker)
#######################
[tool.ty.environment]
python-version = "3.12"
root = ["./finstack-quant-py"]

[tool.ty.src]
include = ["finstack-quant-py/finstack_quant"]
exclude = [
    "examples",
    "finstack-quant-py/examples",
    "finstack-quant-py/tests",
    "scripts",
    "outputs",
    "concatenate_script.py",
]

[tool.ty.analysis]
allowed-unresolved-imports = [
    "pandas.**",
    "numpy.**",
    "requests.**",
    "asteval.**",
    "pydantic.**",
    "matplotlib.**",
    "finstack_quant.finstack_quant",
    "finstack_quant.finstack_quant.**",
]

# __init__.py files bridge the native Rust extension (finstack_quant.finstack_quant)
# whose submodule attributes ty cannot introspect statically.
[[tool.ty.overrides]]
include = ["finstack-quant-py/finstack_quant/__init__.py", "finstack-quant-py/finstack_quant/*/__init__.py"]
[tool.ty.overrides.rules]
unresolved-attribute = "ignore"

[tool.ty.terminal]
error-on-warning = true

#######################
# Bandit Configuration (Security)
#######################
[tool.bandit]
exclude_dirs = ["tests", "examples"]
skips = [
    "B101", # assert_used - we use asserts in tests
    "B601", # paramiko_calls - not applicable
    "B602", # subprocess_popen_with_shell_equals_true - we control the shell usage
]
