[package]
name = "finstack-quant-wasm"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "WebAssembly bindings for Finstack Quant - high-performance financial computation library"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
finstack-quant-analytics = { path = "../finstack-quant/analytics", version = "0.6.0" }
finstack-quant-attribution = { path = "../finstack-quant/attribution", version = "0.6.0" }
finstack-quant-cashflows = { path = "../finstack-quant/cashflows", version = "0.6.0" }
finstack-quant-covenants = { path = "../finstack-quant/covenants", version = "0.6.0" }
finstack-quant-core = { path = "../finstack-quant/core", version = "0.6.0" }
finstack-quant-features = { path = "../finstack-quant/features", version = "0.6.0" }
finstack-quant-margin = { path = "../finstack-quant/margin", version = "0.6.0" }
finstack-quant-statements = { path = "../finstack-quant/statements", version = "0.6.0" }
finstack-quant-statements-analytics = { path = "../finstack-quant/statements-analytics", version = "0.6.0" }
finstack-quant-valuations = { path = "../finstack-quant/valuations", version = "0.6.0", default-features = false }
finstack-quant-factor-model = { path = "../finstack-quant/factor-model", version = "0.6.0" }
finstack-quant-monte-carlo = { path = "../finstack-quant/monte_carlo", version = "0.6.0", default-features = false }
finstack-quant-scenarios = { path = "../finstack-quant/scenarios", version = "0.6.0" }
finstack-quant-portfolio = { path = "../finstack-quant/portfolio", version = "0.6.0", default-features = false }
wasm-bindgen = "0.2.114"
js-sys = "0.3"
serde = { workspace = true }
serde-wasm-bindgen = "0.6"
serde_json = { workspace = true }
indexmap = { workspace = true }
console_error_panic_hook = "0.1"

# Month enum required by Date bindings
time = { workspace = true }

[target.'cfg(all(target_arch = "wasm32", any(target_os = "unknown", target_os = "none")))'.dependencies]
# `jsonschema` pulls in `ahash` -> `getrandom` 0.3 on wasm. Enabling the `wasm_js`
# feature here unifies features for that transitive version so `wasm-pack build`
# can produce the JS/WASM package consumed by the TSX examples.
getrandom_03 = { package = "getrandom", version = "0.3.4", features = ["wasm_js"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"

# Features
#
# - `default`: No feature overrides.
# - `ts_export`: Emit TypeScript type definitions at build time (opt-in, writes files to disk)
[features]
default = []
ts_export = ["finstack-quant-valuations/ts_export"]

[package.metadata.wasm-pack.profile.release]
# Keep this feature allowlist in sync with the wasm features emitted by the
# pinned Rust toolchain; Rust 1.91+ emits SIMD in the optimized module.
wasm-opt = ["-O", "--enable-bulk-memory", "--enable-nontrapping-float-to-int", "--enable-sign-ext", "--enable-mutable-globals", "--enable-simd"]

[package.metadata.wasm-pack.profile.dev]
wasm-opt = ["-O", "--enable-bulk-memory", "--enable-nontrapping-float-to-int", "--enable-sign-ext", "--enable-mutable-globals", "--enable-simd"]

[lints]
workspace = true
