[package]
name = "finstack-quant-analytics"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Risk metrics and portfolio analytics for Finstack Quant: Sharpe, drawdown, correlation matrices, and nearest-correlation repair"

[dependencies]
finstack-quant-core = { path = "../core", version = "0.6.0" }
nalgebra = "0.34"
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { version = "0.1", default-features = false, features = ["attributes"] }

[dev-dependencies]
criterion = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[[bench]]
name = "analytics_hot_paths"
harness = false

[lints]
workspace = true
