[package]
name = "finstack-quant-attribution"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "P&L attribution for Finstack Quant portfolios: Brinson, Taylor, parallel, waterfall, and credit-factor decomposition"
autobenches = false

[dependencies]
finstack-quant-core = { path = "../core", version = "0.6.0" }
finstack-quant-cashflows = { path = "../cashflows", version = "0.6.0" }
finstack-quant-factor-model = { path = "../factor-model", version = "0.6.0" }
finstack-quant-valuations = { path = "../valuations", version = "0.6.0" }
indexmap = { workspace = true, features = ["serde"] }
rayon = "1.11"
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
time = { workspace = true }
tracing = { version = "0.1", default-features = false, features = ["attributes"] }

[dev-dependencies]
criterion = { workspace = true }
proptest = "1.11.0"
rust_decimal = { workspace = true }
smallvec = { version = "1.15", default-features = false }
time = { workspace = true, features = ["macros"] }

[[bench]]
name = "attribution"
harness = false

[[bench]]
name = "attribution_scale"
harness = false

[lints]
workspace = true
